// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots VerticalTabs Active tiers 1`] = `
<div
  style={
    Object {
      "height": "100%",
      "width": "240px",
    }
  }
>
  <ul
    data-css-nqd4p3=""
  >
    <li>
      <div
        data-active={true}
        data-css-13xqjhl=""
        data-css-1b8plv5=""
      >
        <button
          data-css-f6e4dj=""
          onClick={[Function]}
        >
          <div
            data-active={true}
            data-css-otejxm=""
            data-css-pfebor=""
          >
            <svg
              fill="none"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M17 3h-2v2h2V3zM13 3v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zM3 11v2h2v-2H3zM3 17v-2h2v2H3zM3 19v1.1a.9.9 0 00.9.9H5v-2H3zM7 19v2h2v-2H7zM11 19v2h2v-2h-2zM15 19v2h2v-2h-2zM19 19v2h1.1a.9.9 0 00.9-.9V19h-2zM21 15h-2v2h2v-2zM21 11v2h-2v-2h2zM21 9V7h-2v2h2zM21 3.9V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
              />
            </svg>
          </div>
          <span>
            Tier 1 active
          </span>
        </button>
      </div>
    </li>
    <li>
      <div
        data-active={true}
        data-css-1b8plv5=""
        data-css-nh4zmc=""
      >
        <button
          data-css-mbxfai=""
          onClick={[Function]}
        >
          Tier 2 active
        </button>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots VerticalTabs CollapsibleGroup 1`] = `
<div
  style={
    Object {
      "height": "100%",
      "width": "240px",
    }
  }
>
  <ul
    data-css-nqd4p3=""
  >
    <li>
      <div
        data-css-13xqjhl=""
        data-css-1b8plv5=""
      >
        <span
          data-css-f6e4dj=""
        >
          <div
            data-css-otejxm=""
            data-css-pfebor=""
          >
            <svg
              fill="none"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M17 3h-2v2h2V3zM13 3v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zM3 11v2h2v-2H3zM3 17v-2h2v2H3zM3 19v1.1a.9.9 0 00.9.9H5v-2H3zM7 19v2h2v-2H7zM11 19v2h2v-2h-2zM15 19v2h2v-2h-2zM19 19v2h1.1a.9.9 0 00.9-.9V19h-2zM21 15h-2v2h2v-2zM21 11v2h-2v-2h2zM21 9V7h-2v2h2zM21 3.9V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
              />
            </svg>
          </div>
          <span>
            Reports home
          </span>
        </span>
      </div>
    </li>
    <div>
      <h2
        data-css-dk3o27=""
      >
        <button
          aria-label="Collapse"
          data-css-h54kwj=""
          onClick={[Function]}
        >
          <span
            data-css-rl0fow=""
          >
            Operational Reports
          </span>
          <div
            data-css-12f5sv2=""
            data-css-18aymev=""
          >
            <svg
              aria-label="caret down icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
              />
            </svg>
          </div>
        </button>
      </h2>
      <ul
        aria-hidden={false}
        data-css-1y8i23u=""
      >
        <li>
          <div
            data-css-13xqjhl=""
            data-css-1b8plv5=""
          >
            <span
              data-css-f6e4dj=""
            >
              <div
                data-css-otejxm=""
                data-css-pfebor=""
              >
                <svg
                  fill="none"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M17 3h-2v2h2V3zM13 3v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zM3 11v2h2v-2H3zM3 17v-2h2v2H3zM3 19v1.1a.9.9 0 00.9.9H5v-2H3zM7 19v2h2v-2H7zM11 19v2h2v-2h-2zM15 19v2h2v-2h-2zM19 19v2h1.1a.9.9 0 00.9-.9V19h-2zM21 15h-2v2h2v-2zM21 11v2h-2v-2h2zM21 9V7h-2v2h2zM21 3.9V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
                  />
                </svg>
              </div>
              <span>
                Work log
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            data-css-13xqjhl=""
            data-css-1b8plv5=""
          >
            <span
              data-css-f6e4dj=""
            >
              <div
                data-css-otejxm=""
                data-css-pfebor=""
              >
                <svg
                  fill="none"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M17 3h-2v2h2V3zM13 3v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zM3 11v2h2v-2H3zM3 17v-2h2v2H3zM3 19v1.1a.9.9 0 00.9.9H5v-2H3zM7 19v2h2v-2H7zM11 19v2h2v-2h-2zM15 19v2h2v-2h-2zM19 19v2h1.1a.9.9 0 00.9-.9V19h-2zM21 15h-2v2h2v-2zM21 11v2h-2v-2h2zM21 9V7h-2v2h2zM21 3.9V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
                  />
                </svg>
              </div>
              <span>
                Project timeline
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            data-css-13xqjhl=""
            data-css-1b8plv5=""
          >
            <span
              data-css-f6e4dj=""
            >
              <div
                data-css-otejxm=""
                data-css-pfebor=""
              >
                <svg
                  fill="none"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M17 3h-2v2h2V3zM13 3v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zM3 11v2h2v-2H3zM3 17v-2h2v2H3zM3 19v1.1a.9.9 0 00.9.9H5v-2H3zM7 19v2h2v-2H7zM11 19v2h2v-2h-2zM15 19v2h2v-2h-2zM19 19v2h1.1a.9.9 0 00.9-.9V19h-2zM21 15h-2v2h2v-2zM21 11v2h-2v-2h2zM21 9V7h-2v2h2zM21 3.9V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
                  />
                </svg>
              </div>
              <span>
                Leaderboard
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            data-css-13xqjhl=""
            data-css-1b8plv5=""
          >
            <span
              data-css-f6e4dj=""
            >
              <div
                data-css-otejxm=""
                data-css-pfebor=""
              >
                <svg
                  fill="none"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M17 3h-2v2h2V3zM13 3v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zM3 11v2h2v-2H3zM3 17v-2h2v2H3zM3 19v1.1a.9.9 0 00.9.9H5v-2H3zM7 19v2h2v-2H7zM11 19v2h2v-2h-2zM15 19v2h2v-2h-2zM19 19v2h1.1a.9.9 0 00.9-.9V19h-2zM21 15h-2v2h2v-2zM21 11v2h-2v-2h2zM21 9V7h-2v2h2zM21 3.9V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
                  />
                </svg>
              </div>
              <span>
                Retrospective
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            data-css-13xqjhl=""
            data-css-1b8plv5=""
          >
            <span
              data-css-f6e4dj=""
            >
              <div
                data-css-otejxm=""
                data-css-pfebor=""
              >
                <svg
                  fill="none"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M17 3h-2v2h2V3zM13 3v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zM3 11v2h2v-2H3zM3 17v-2h2v2H3zM3 19v1.1a.9.9 0 00.9.9H5v-2H3zM7 19v2h2v-2H7zM11 19v2h2v-2h-2zM15 19v2h2v-2h-2zM19 19v2h1.1a.9.9 0 00.9-.9V19h-2zM21 15h-2v2h2v-2zM21 11v2h-2v-2h2zM21 9V7h-2v2h2zM21 3.9V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
                  />
                </svg>
              </div>
              <span>
                Snapshot
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            data-css-13xqjhl=""
            data-css-1b8plv5=""
          >
            <span
              data-css-f6e4dj=""
            >
              <div
                data-css-otejxm=""
                data-css-pfebor=""
              >
                <svg
                  fill="none"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M17 3h-2v2h2V3zM13 3v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zM3 11v2h2v-2H3zM3 17v-2h2v2H3zM3 19v1.1a.9.9 0 00.9.9H5v-2H3zM7 19v2h2v-2H7zM11 19v2h2v-2h-2zM15 19v2h2v-2h-2zM19 19v2h1.1a.9.9 0 00.9-.9V19h-2zM21 15h-2v2h2v-2zM21 11v2h-2v-2h2zM21 9V7h-2v2h2zM21 3.9V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
                  />
                </svg>
              </div>
              <span>
                Daily update
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            data-css-13xqjhl=""
            data-css-1b8plv5=""
          >
            <span
              data-css-f6e4dj=""
            >
              <div
                data-css-otejxm=""
                data-css-pfebor=""
              >
                <svg
                  fill="none"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M17 3h-2v2h2V3zM13 3v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zM3 11v2h2v-2H3zM3 17v-2h2v2H3zM3 19v1.1a.9.9 0 00.9.9H5v-2H3zM7 19v2h2v-2H7zM11 19v2h2v-2h-2zM15 19v2h2v-2h-2zM19 19v2h1.1a.9.9 0 00.9-.9V19h-2zM21 15h-2v2h2v-2zM21 11v2h-2v-2h2zM21 9V7h-2v2h2zM21 3.9V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
                  />
                </svg>
              </div>
              <span>
                Spot check
              </span>
            </span>
          </div>
        </li>
      </ul>
    </div>
    <div>
      <h2
        data-css-dk3o27=""
      >
        <button
          aria-label="Expand"
          data-css-h54kwj=""
          onClick={[Function]}
        >
          <span
            data-css-rl0fow=""
          >
            Reviews & Collaboration
          </span>
          <div
            data-css-10afqa=""
            data-css-12f5sv2=""
          >
            <svg
              aria-label="caret down icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
              />
            </svg>
          </div>
        </button>
      </h2>
      <ul
        aria-hidden={true}
        data-css-1y8i23u=""
      />
    </div>
    <div>
      <h2
        data-css-dk3o27=""
      >
        <button
          aria-label="Expand"
          data-css-h54kwj=""
          onClick={[Function]}
        >
          <span
            data-css-rl0fow=""
          >
            Fundamentals
          </span>
          <div
            data-css-10afqa=""
            data-css-12f5sv2=""
          >
            <svg
              aria-label="caret down icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
              />
            </svg>
          </div>
        </button>
      </h2>
      <ul
        aria-hidden={true}
        data-css-1y8i23u=""
      />
    </div>
  </ul>
</div>
`;

exports[`Storyshots VerticalTabs Group 1`] = `
<div
  style={
    Object {
      "height": "100%",
      "width": "240px",
    }
  }
>
  <ul
    data-css-nqd4p3=""
  >
    <li
      data-css-1268me8=""
    >
      <h2
        data-css-dk3o27=""
      >
        <span
          data-css-rl0fow=""
        >
          Introduction
        </span>
      </h2>
      <ul
        data-css-gkw1j5=""
      >
        <li>
          <div
            data-css-13xqjhl=""
            data-css-1b8plv5=""
          >
            <span
              data-css-f6e4dj=""
            >
              <span>
                Install
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            data-css-13xqjhl=""
            data-css-1b8plv5=""
          >
            <span
              data-css-f6e4dj=""
            >
              <span>
                Design assets
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            data-css-13xqjhl=""
            data-css-1b8plv5=""
          >
            <span
              data-css-f6e4dj=""
            >
              <span>
                Contribute
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            data-css-13xqjhl=""
            data-css-1b8plv5=""
          >
            <span
              data-css-f6e4dj=""
            >
              <span>
                Roadmap
              </span>
            </span>
          </div>
        </li>
      </ul>
    </li>
    <hr
      data-css-1luso1=""
    />
    <li
      data-css-1268me8=""
    >
      <h2
        data-css-dk3o27=""
      >
        <span
          data-css-rl0fow=""
        >
          Foundations
        </span>
      </h2>
      <ul
        data-css-gkw1j5=""
      >
        <li>
          <div
            data-css-13xqjhl=""
            data-css-1b8plv5=""
          >
            <span
              data-css-f6e4dj=""
            >
              <div
                data-css-otejxm=""
                data-css-pfebor=""
              >
                <svg
                  fill="none"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M17 3h-2v2h2V3zM13 3v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zM3 11v2h2v-2H3zM3 17v-2h2v2H3zM3 19v1.1a.9.9 0 00.9.9H5v-2H3zM7 19v2h2v-2H7zM11 19v2h2v-2h-2zM15 19v2h2v-2h-2zM19 19v2h1.1a.9.9 0 00.9-.9V19h-2zM21 15h-2v2h2v-2zM21 11v2h-2v-2h2zM21 9V7h-2v2h2zM21 3.9V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
                  />
                </svg>
              </div>
              <span>
                Color
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            data-css-13xqjhl=""
            data-css-1b8plv5=""
          >
            <span
              data-css-f6e4dj=""
            >
              <div
                data-css-otejxm=""
                data-css-pfebor=""
              >
                <svg
                  fill="none"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M17 3h-2v2h2V3zM13 3v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zM3 11v2h2v-2H3zM3 17v-2h2v2H3zM3 19v1.1a.9.9 0 00.9.9H5v-2H3zM7 19v2h2v-2H7zM11 19v2h2v-2h-2zM15 19v2h2v-2h-2zM19 19v2h1.1a.9.9 0 00.9-.9V19h-2zM21 15h-2v2h2v-2zM21 11v2h-2v-2h2zM21 9V7h-2v2h2zM21 3.9V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
                  />
                </svg>
              </div>
              <span>
                Typography
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            data-css-13xqjhl=""
            data-css-1b8plv5=""
          >
            <span
              data-css-f6e4dj=""
            >
              <div
                data-css-otejxm=""
                data-css-pfebor=""
              >
                <svg
                  fill="none"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M17 3h-2v2h2V3zM13 3v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zM3 11v2h2v-2H3zM3 17v-2h2v2H3zM3 19v1.1a.9.9 0 00.9.9H5v-2H3zM7 19v2h2v-2H7zM11 19v2h2v-2h-2zM15 19v2h2v-2h-2zM19 19v2h1.1a.9.9 0 00.9-.9V19h-2zM21 15h-2v2h2v-2zM21 11v2h-2v-2h2zM21 9V7h-2v2h2zM21 3.9V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
                  />
                </svg>
              </div>
              <span>
                Spacing
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            data-css-13xqjhl=""
            data-css-1b8plv5=""
          >
            <span
              data-css-f6e4dj=""
            >
              <div
                data-css-otejxm=""
                data-css-pfebor=""
              >
                <svg
                  fill="none"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M17 3h-2v2h2V3zM13 3v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zM3 11v2h2v-2H3zM3 17v-2h2v2H3zM3 19v1.1a.9.9 0 00.9.9H5v-2H3zM7 19v2h2v-2H7zM11 19v2h2v-2h-2zM15 19v2h2v-2h-2zM19 19v2h1.1a.9.9 0 00.9-.9V19h-2zM21 15h-2v2h2v-2zM21 11v2h-2v-2h2zM21 9V7h-2v2h2zM21 3.9V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
                  />
                </svg>
              </div>
              <span>
                Iconography
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            data-css-13xqjhl=""
            data-css-1b8plv5=""
          >
            <span
              data-css-f6e4dj=""
            >
              <div
                data-css-otejxm=""
                data-css-pfebor=""
              >
                <svg
                  fill="none"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M17 3h-2v2h2V3zM13 3v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zM3 11v2h2v-2H3zM3 17v-2h2v2H3zM3 19v1.1a.9.9 0 00.9.9H5v-2H3zM7 19v2h2v-2H7zM11 19v2h2v-2h-2zM15 19v2h2v-2h-2zM19 19v2h1.1a.9.9 0 00.9-.9V19h-2zM21 15h-2v2h2v-2zM21 11v2h-2v-2h2zM21 9V7h-2v2h2zM21 3.9V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
                  />
                </svg>
              </div>
              <span>
                Voice & Tone
              </span>
            </span>
          </div>
        </li>
      </ul>
    </li>
    <hr
      data-css-1luso1=""
    />
    <li
      data-css-1268me8=""
    >
      <h2
        data-css-dk3o27=""
      >
        <span
          data-css-rl0fow=""
        >
          Components
        </span>
      </h2>
      <ul
        data-css-gkw1j5=""
      >
        <li>
          <div
            data-active={true}
            data-css-13xqjhl=""
            data-css-1b8plv5=""
          >
            <span
              data-css-f6e4dj=""
            >
              <span>
                Avatar
              </span>
            </span>
          </div>
          <ul
            data-css-gkw1j5=""
          >
            <li>
              <div
                data-active={true}
                data-css-1b8plv5=""
                data-css-nh4zmc=""
              >
                <span
                  data-css-mbxfai=""
                >
                  Prop types
                </span>
              </div>
            </li>
            <li>
              <div
                data-css-1b8plv5=""
                data-css-nh4zmc=""
              >
                <span
                  data-css-mbxfai=""
                >
                  Guidelines
                </span>
              </div>
            </li>
          </ul>
        </li>
        <li>
          <div
            data-css-13xqjhl=""
            data-css-1b8plv5=""
          >
            <span
              data-css-f6e4dj=""
            >
              <span>
                Button
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            data-css-13xqjhl=""
            data-css-1b8plv5=""
          >
            <span
              data-css-f6e4dj=""
            >
              <span>
                Badge
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            data-css-13xqjhl=""
            data-css-1b8plv5=""
          >
            <span
              data-css-f6e4dj=""
            >
              <span>
                Breadcrumb
              </span>
            </span>
          </div>
        </li>
      </ul>
    </li>
  </ul>
</div>
`;

exports[`Storyshots VerticalTabs Href changes tier tag to link 1`] = `
<div
  style={
    Object {
      "height": "100%",
      "width": "240px",
    }
  }
>
  <ul
    data-css-nqd4p3=""
  >
    <li>
      <div
        data-css-13xqjhl=""
        data-css-1b8plv5=""
      >
        <a
          data-css-f6e4dj=""
          href=" "
        >
          <span>
            Tier 1 link
          </span>
        </a>
      </div>
    </li>
    <li>
      <div
        data-css-1b8plv5=""
        data-css-nh4zmc=""
      >
        <a
          data-css-mbxfai=""
          href=" "
        >
          Tier 2 link
        </a>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots VerticalTabs Long text 1`] = `
<div
  style={
    Object {
      "height": "100%",
      "width": "240px",
    }
  }
>
  <ul
    data-css-nqd4p3=""
  >
    <li
      data-css-1268me8=""
    >
      <h2
        data-css-dk3o27=""
      >
        <span
          data-css-rl0fow=""
        >
          The technology skills platform
        </span>
      </h2>
      <ul
        data-css-gkw1j5=""
      />
    </li>
    <div>
      <h2
        data-css-dk3o27=""
      >
        <button
          aria-label="Expand"
          data-css-h54kwj=""
          onClick={[Function]}
        >
          <span
            data-css-rl0fow=""
          >
            The technology skills platform
          </span>
          <div
            data-css-10afqa=""
            data-css-12f5sv2=""
          >
            <svg
              aria-label="caret down icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
              />
            </svg>
          </div>
        </button>
      </h2>
      <ul
        aria-hidden={true}
        data-css-1y8i23u=""
      />
    </div>
    <li>
      <div
        data-css-13xqjhl=""
        data-css-1b8plv5=""
      >
        <span
          data-css-f6e4dj=""
        >
          <span>
            The technology skills platform
          </span>
        </span>
      </div>
    </li>
    <li>
      <div
        data-css-1b8plv5=""
        data-css-nh4zmc=""
      >
        <span
          data-css-mbxfai=""
        >
          The technology skills platform
        </span>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots VerticalTabs No Group 1`] = `
<div
  style={
    Object {
      "height": "100%",
      "width": "240px",
    }
  }
>
  <ul
    data-css-nqd4p3=""
  >
    <li>
      <div
        data-css-13xqjhl=""
        data-css-1b8plv5=""
      >
        <span
          data-css-f6e4dj=""
        >
          <span>
            Dashboard
          </span>
        </span>
      </div>
    </li>
    <li>
      <div
        data-css-13xqjhl=""
        data-css-1b8plv5=""
      >
        <span
          data-css-f6e4dj=""
        >
          <span>
            Account
          </span>
        </span>
      </div>
    </li>
    <li>
      <div
        data-active={true}
        data-css-13xqjhl=""
        data-css-1b8plv5=""
      >
        <span
          data-css-f6e4dj=""
        >
          <div
            data-active={true}
            data-css-otejxm=""
            data-css-pfebor=""
          >
            <svg
              fill="none"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M17 3h-2v2h2V3zM13 3v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zM3 11v2h2v-2H3zM3 17v-2h2v2H3zM3 19v1.1a.9.9 0 00.9.9H5v-2H3zM7 19v2h2v-2H7zM11 19v2h2v-2h-2zM15 19v2h2v-2h-2zM19 19v2h1.1a.9.9 0 00.9-.9V19h-2zM21 15h-2v2h2v-2zM21 11v2h-2v-2h2zM21 9V7h-2v2h2zM21 3.9V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
              />
            </svg>
          </div>
          <span>
            People
          </span>
        </span>
      </div>
      <ul
        data-css-gkw1j5=""
      >
        <li>
          <div
            data-active={true}
            data-css-1b8plv5=""
            data-css-nh4zmc=""
          >
            <span
              data-css-mbxfai=""
            >
              Organization
            </span>
          </div>
        </li>
        <li>
          <div
            data-css-1b8plv5=""
            data-css-nh4zmc=""
          >
            <span
              data-css-mbxfai=""
            >
              Admins
            </span>
          </div>
        </li>
        <li>
          <div
            data-css-1b8plv5=""
            data-css-nh4zmc=""
          >
            <span
              data-css-mbxfai=""
            >
              Managers
            </span>
          </div>
        </li>
        <li>
          <div
            data-css-1b8plv5=""
            data-css-nh4zmc=""
          >
            <span
              data-css-mbxfai=""
            >
              Unassigned users
            </span>
          </div>
        </li>
      </ul>
    </li>
    <li>
      <div
        data-css-13xqjhl=""
        data-css-1b8plv5=""
      >
        <span
          data-css-f6e4dj=""
        >
          <div
            data-css-otejxm=""
            data-css-pfebor=""
          >
            <svg
              fill="none"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M17 3h-2v2h2V3zM13 3v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zM3 11v2h2v-2H3zM3 17v-2h2v2H3zM3 19v1.1a.9.9 0 00.9.9H5v-2H3zM7 19v2h2v-2H7zM11 19v2h2v-2h-2zM15 19v2h2v-2h-2zM19 19v2h1.1a.9.9 0 00.9-.9V19h-2zM21 15h-2v2h2v-2zM21 11v2h-2v-2h2zM21 9V7h-2v2h2zM21 3.9V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
              />
            </svg>
          </div>
          <span>
            Pending invites
          </span>
        </span>
      </div>
    </li>
    <li>
      <div
        data-css-13xqjhl=""
        data-css-1b8plv5=""
      >
        <span
          data-css-f6e4dj=""
        >
          <div
            data-css-otejxm=""
            data-css-pfebor=""
          >
            <svg
              fill="none"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M17 3h-2v2h2V3zM13 3v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zM3 11v2h2v-2H3zM3 17v-2h2v2H3zM3 19v1.1a.9.9 0 00.9.9H5v-2H3zM7 19v2h2v-2H7zM11 19v2h2v-2h-2zM15 19v2h2v-2h-2zM19 19v2h1.1a.9.9 0 00.9-.9V19h-2zM21 15h-2v2h2v-2zM21 11v2h-2v-2h2zM21 9V7h-2v2h2zM21 3.9V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
              />
            </svg>
          </div>
          <span>
            Analytics
          </span>
        </span>
      </div>
    </li>
    <li>
      <div
        data-css-13xqjhl=""
        data-css-1b8plv5=""
      >
        <span
          data-css-f6e4dj=""
        >
          <div
            data-css-otejxm=""
            data-css-pfebor=""
          >
            <svg
              fill="none"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M17 3h-2v2h2V3zM13 3v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zM3 11v2h2v-2H3zM3 17v-2h2v2H3zM3 19v1.1a.9.9 0 00.9.9H5v-2H3zM7 19v2h2v-2H7zM11 19v2h2v-2h-2zM15 19v2h2v-2h-2zM19 19v2h1.1a.9.9 0 00.9-.9V19h-2zM21 15h-2v2h2v-2zM21 11v2h-2v-2h2zM21 9V7h-2v2h2zM21 3.9V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
              />
            </svg>
          </div>
          <span>
            Log
          </span>
        </span>
      </div>
    </li>
    <hr
      data-css-1luso1=""
    />
    <li>
      <div
        data-css-13xqjhl=""
        data-css-1b8plv5=""
      >
        <span
          data-css-f6e4dj=""
        >
          <div
            data-css-otejxm=""
            data-css-pfebor=""
          >
            <svg
              fill="none"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M17 3h-2v2h2V3zM13 3v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zM3 11v2h2v-2H3zM3 17v-2h2v2H3zM3 19v1.1a.9.9 0 00.9.9H5v-2H3zM7 19v2h2v-2H7zM11 19v2h2v-2h-2zM15 19v2h2v-2h-2zM19 19v2h1.1a.9.9 0 00.9-.9V19h-2zM21 15h-2v2h2v-2zM21 11v2h-2v-2h2zM21 9V7h-2v2h2zM21 3.9V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
              />
            </svg>
          </div>
          <span>
            Item label
          </span>
        </span>
      </div>
    </li>
    <li>
      <div
        data-css-13xqjhl=""
        data-css-1b8plv5=""
      >
        <span
          data-css-f6e4dj=""
        >
          <div
            data-css-otejxm=""
            data-css-pfebor=""
          >
            <svg
              fill="none"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M17 3h-2v2h2V3zM13 3v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zM3 11v2h2v-2H3zM3 17v-2h2v2H3zM3 19v1.1a.9.9 0 00.9.9H5v-2H3zM7 19v2h2v-2H7zM11 19v2h2v-2h-2zM15 19v2h2v-2h-2zM19 19v2h1.1a.9.9 0 00.9-.9V19h-2zM21 15h-2v2h2v-2zM21 11v2h-2v-2h2zM21 9V7h-2v2h2zM21 3.9V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
              />
            </svg>
          </div>
          <span>
            Item label
          </span>
        </span>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots VerticalTabs gitprime example 1`] = `
<div
  style={
    Object {
      "height": "100%",
      "width": "240px",
    }
  }
>
  <ul
    data-css-nqd4p3=""
  >
    <li
      data-css-1268me8=""
    >
      <ul
        data-css-gkw1j5=""
      >
        <li
          onClick={[Function]}
        >
          <div
            data-css-13xqjhl=""
            data-css-1b8plv5=""
          >
            <a
              data-css-f6e4dj=""
              href="#"
            >
              <div
                data-css-otejxm=""
                data-css-pfebor=""
              >
                <svg
                  fill="none"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M17 3h-2v2h2V3zM13 3v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zM3 11v2h2v-2H3zM3 17v-2h2v2H3zM3 19v1.1a.9.9 0 00.9.9H5v-2H3zM7 19v2h2v-2H7zM11 19v2h2v-2h-2zM15 19v2h2v-2h-2zM19 19v2h1.1a.9.9 0 00.9-.9V19h-2zM21 15h-2v2h2v-2zM21 11v2h-2v-2h2zM21 9V7h-2v2h2zM21 3.9V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
                  />
                </svg>
              </div>
              <span>
                Reports Home
              </span>
            </a>
          </div>
        </li>
      </ul>
    </li>
    <div>
      <h2
        data-css-dk3o27=""
      >
        <button
          aria-label="Collapse"
          data-css-h54kwj=""
          onClick={[Function]}
        >
          <span
            data-css-rl0fow=""
          >
            Operational Reports
          </span>
          <div
            data-css-12f5sv2=""
            data-css-18aymev=""
          >
            <svg
              aria-label="caret down icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
              />
            </svg>
          </div>
        </button>
      </h2>
      <ul
        aria-hidden={false}
        data-css-1y8i23u=""
      >
        <li
          onClick={[Function]}
        >
          <div
            data-css-13xqjhl=""
            data-css-1b8plv5=""
          >
            <a
              data-css-f6e4dj=""
              href="#"
            >
              <div
                data-css-otejxm=""
                data-css-pfebor=""
              >
                <svg
                  fill="none"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M17 3h-2v2h2V3zM13 3v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zM3 11v2h2v-2H3zM3 17v-2h2v2H3zM3 19v1.1a.9.9 0 00.9.9H5v-2H3zM7 19v2h2v-2H7zM11 19v2h2v-2h-2zM15 19v2h2v-2h-2zM19 19v2h1.1a.9.9 0 00.9-.9V19h-2zM21 15h-2v2h2v-2zM21 11v2h-2v-2h2zM21 9V7h-2v2h2zM21 3.9V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
                  />
                </svg>
              </div>
              <span>
                Work Log
              </span>
            </a>
          </div>
        </li>
        <li
          onClick={[Function]}
        >
          <div
            data-css-13xqjhl=""
            data-css-1b8plv5=""
          >
            <a
              data-css-f6e4dj=""
              href="#"
            >
              <div
                data-css-otejxm=""
                data-css-pfebor=""
              >
                <svg
                  fill="none"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M17 3h-2v2h2V3zM13 3v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zM3 11v2h2v-2H3zM3 17v-2h2v2H3zM3 19v1.1a.9.9 0 00.9.9H5v-2H3zM7 19v2h2v-2H7zM11 19v2h2v-2h-2zM15 19v2h2v-2h-2zM19 19v2h1.1a.9.9 0 00.9-.9V19h-2zM21 15h-2v2h2v-2zM21 11v2h-2v-2h2zM21 9V7h-2v2h2zM21 3.9V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
                  />
                </svg>
              </div>
              <span>
                Project Timeline
              </span>
            </a>
          </div>
        </li>
        <li
          onClick={[Function]}
        >
          <div
            data-css-13xqjhl=""
            data-css-1b8plv5=""
          >
            <a
              data-css-f6e4dj=""
              href="#"
            >
              <div
                data-css-otejxm=""
                data-css-pfebor=""
              >
                <svg
                  fill="none"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M17 3h-2v2h2V3zM13 3v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zM3 11v2h2v-2H3zM3 17v-2h2v2H3zM3 19v1.1a.9.9 0 00.9.9H5v-2H3zM7 19v2h2v-2H7zM11 19v2h2v-2h-2zM15 19v2h2v-2h-2zM19 19v2h1.1a.9.9 0 00.9-.9V19h-2zM21 15h-2v2h2v-2zM21 11v2h-2v-2h2zM21 9V7h-2v2h2zM21 3.9V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
                  />
                </svg>
              </div>
              <span>
                Leaderboard
              </span>
            </a>
          </div>
        </li>
        <li
          onClick={[Function]}
        >
          <div
            data-css-13xqjhl=""
            data-css-1b8plv5=""
          >
            <a
              data-css-f6e4dj=""
              href="#"
            >
              <div
                data-css-otejxm=""
                data-css-pfebor=""
              >
                <svg
                  fill="none"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M17 3h-2v2h2V3zM13 3v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zM3 11v2h2v-2H3zM3 17v-2h2v2H3zM3 19v1.1a.9.9 0 00.9.9H5v-2H3zM7 19v2h2v-2H7zM11 19v2h2v-2h-2zM15 19v2h2v-2h-2zM19 19v2h1.1a.9.9 0 00.9-.9V19h-2zM21 15h-2v2h2v-2zM21 11v2h-2v-2h2zM21 9V7h-2v2h2zM21 3.9V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
                  />
                </svg>
              </div>
              <span>
                Snapshot
              </span>
            </a>
          </div>
        </li>
        <li
          onClick={[Function]}
        >
          <div
            data-css-13xqjhl=""
            data-css-1b8plv5=""
          >
            <a
              data-css-f6e4dj=""
              href="#"
            >
              <div
                data-css-otejxm=""
                data-css-pfebor=""
              >
                <svg
                  fill="none"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M17 3h-2v2h2V3zM13 3v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zM3 11v2h2v-2H3zM3 17v-2h2v2H3zM3 19v1.1a.9.9 0 00.9.9H5v-2H3zM7 19v2h2v-2H7zM11 19v2h2v-2h-2zM15 19v2h2v-2h-2zM19 19v2h1.1a.9.9 0 00.9-.9V19h-2zM21 15h-2v2h2v-2zM21 11v2h-2v-2h2zM21 9V7h-2v2h2zM21 3.9V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
                  />
                </svg>
              </div>
              <span>
                Daily Updates
              </span>
            </a>
          </div>
        </li>
        <li
          onClick={[Function]}
        >
          <div
            data-css-13xqjhl=""
            data-css-1b8plv5=""
          >
            <a
              data-css-f6e4dj=""
              href="#"
            >
              <div
                data-css-otejxm=""
                data-css-pfebor=""
              >
                <svg
                  fill="none"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M17 3h-2v2h2V3zM13 3v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zM3 11v2h2v-2H3zM3 17v-2h2v2H3zM3 19v1.1a.9.9 0 00.9.9H5v-2H3zM7 19v2h2v-2H7zM11 19v2h2v-2h-2zM15 19v2h2v-2h-2zM19 19v2h1.1a.9.9 0 00.9-.9V19h-2zM21 15h-2v2h2v-2zM21 11v2h-2v-2h2zM21 9V7h-2v2h2zM21 3.9V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
                  />
                </svg>
              </div>
              <span>
                Spot Check
              </span>
            </a>
          </div>
        </li>
      </ul>
    </div>
    <div>
      <h2
        data-css-dk3o27=""
      >
        <button
          aria-label="Collapse"
          data-css-h54kwj=""
          onClick={[Function]}
        >
          <span
            data-css-rl0fow=""
          >
            Review & Collaborate
          </span>
          <div
            data-css-12f5sv2=""
            data-css-18aymev=""
          >
            <svg
              aria-label="caret down icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
              />
            </svg>
          </div>
        </button>
      </h2>
      <ul
        aria-hidden={false}
        data-css-1y8i23u=""
      >
        <li
          onClick={[Function]}
        >
          <div
            data-css-13xqjhl=""
            data-css-1b8plv5=""
          >
            <a
              data-css-f6e4dj=""
              href="#"
            >
              <div
                data-css-otejxm=""
                data-css-pfebor=""
              >
                <svg
                  fill="none"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M17 3h-2v2h2V3zM13 3v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zM3 11v2h2v-2H3zM3 17v-2h2v2H3zM3 19v1.1a.9.9 0 00.9.9H5v-2H3zM7 19v2h2v-2H7zM11 19v2h2v-2h-2zM15 19v2h2v-2h-2zM19 19v2h1.1a.9.9 0 00.9-.9V19h-2zM21 15h-2v2h2v-2zM21 11v2h-2v-2h2zM21 9V7h-2v2h2zM21 3.9V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
                  />
                </svg>
              </div>
              <span>
                Review Workflow
              </span>
            </a>
          </div>
        </li>
        <li
          onClick={[Function]}
        >
          <div
            data-css-13xqjhl=""
            data-css-1b8plv5=""
          >
            <a
              data-css-f6e4dj=""
              href="#"
            >
              <div
                data-css-otejxm=""
                data-css-pfebor=""
              >
                <svg
                  fill="none"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M17 3h-2v2h2V3zM13 3v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zM3 11v2h2v-2H3zM3 17v-2h2v2H3zM3 19v1.1a.9.9 0 00.9.9H5v-2H3zM7 19v2h2v-2H7zM11 19v2h2v-2h-2zM15 19v2h2v-2h-2zM19 19v2h1.1a.9.9 0 00.9-.9V19h-2zM21 15h-2v2h2v-2zM21 11v2h-2v-2h2zM21 9V7h-2v2h2zM21 3.9V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
                  />
                </svg>
              </div>
              <span>
                Review Collaboration
              </span>
            </a>
          </div>
        </li>
        <li
          onClick={[Function]}
        >
          <div
            data-active={true}
            data-css-13xqjhl=""
            data-css-1b8plv5=""
          >
            <a
              data-css-f6e4dj=""
              href="#"
            >
              <div
                data-active={true}
                data-css-otejxm=""
                data-css-pfebor=""
              >
                <svg
                  fill="none"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M17 3h-2v2h2V3zM13 3v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zM3 11v2h2v-2H3zM3 17v-2h2v2H3zM3 19v1.1a.9.9 0 00.9.9H5v-2H3zM7 19v2h2v-2H7zM11 19v2h2v-2h-2zM15 19v2h2v-2h-2zM19 19v2h1.1a.9.9 0 00.9-.9V19h-2zM21 15h-2v2h2v-2zM21 11v2h-2v-2h2zM21 9V7h-2v2h2zM21 3.9V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
                  />
                </svg>
              </div>
              <span>
                PR Resolution
              </span>
            </a>
          </div>
        </li>
        <li
          onClick={[Function]}
        >
          <div
            data-css-13xqjhl=""
            data-css-1b8plv5=""
          >
            <a
              data-css-f6e4dj=""
              href="#"
            >
              <div
                data-css-otejxm=""
                data-css-pfebor=""
              >
                <svg
                  fill="none"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M17 3h-2v2h2V3zM13 3v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zM3 11v2h2v-2H3zM3 17v-2h2v2H3zM3 19v1.1a.9.9 0 00.9.9H5v-2H3zM7 19v2h2v-2H7zM11 19v2h2v-2h-2zM15 19v2h2v-2h-2zM19 19v2h1.1a.9.9 0 00.9-.9V19h-2zM21 15h-2v2h2v-2zM21 11v2h-2v-2h2zM21 9V7h-2v2h2zM21 3.9V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
                  />
                </svg>
              </div>
              <span>
                Knowledge Sharing
              </span>
            </a>
          </div>
        </li>
        <li
          onClick={[Function]}
        >
          <div
            data-css-13xqjhl=""
            data-css-1b8plv5=""
          >
            <a
              data-css-f6e4dj=""
              href="#"
            >
              <div
                data-css-otejxm=""
                data-css-pfebor=""
              >
                <svg
                  fill="none"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M17 3h-2v2h2V3zM13 3v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zM3 11v2h2v-2H3zM3 17v-2h2v2H3zM3 19v1.1a.9.9 0 00.9.9H5v-2H3zM7 19v2h2v-2H7zM11 19v2h2v-2h-2zM15 19v2h2v-2h-2zM19 19v2h1.1a.9.9 0 00.9-.9V19h-2zM21 15h-2v2h2v-2zM21 11v2h-2v-2h2zM21 9V7h-2v2h2zM21 3.9V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
                  />
                </svg>
              </div>
              <span>
                Player Card
              </span>
            </a>
          </div>
        </li>
      </ul>
    </div>
    <div>
      <h2
        data-css-dk3o27=""
      >
        <button
          aria-label="Collapse"
          data-css-h54kwj=""
          onClick={[Function]}
        >
          <span
            data-css-rl0fow=""
          >
            Delivery
          </span>
          <div
            data-css-12f5sv2=""
            data-css-18aymev=""
          >
            <svg
              aria-label="caret down icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
              />
            </svg>
          </div>
        </button>
      </h2>
      <ul
        aria-hidden={false}
        data-css-1y8i23u=""
      >
        <li
          onClick={[Function]}
        >
          <div
            data-css-13xqjhl=""
            data-css-1b8plv5=""
          >
            <a
              data-css-f6e4dj=""
              href="#"
            >
              <div
                data-css-otejxm=""
                data-css-pfebor=""
              >
                <svg
                  fill="none"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M17 3h-2v2h2V3zM13 3v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zM3 11v2h2v-2H3zM3 17v-2h2v2H3zM3 19v1.1a.9.9 0 00.9.9H5v-2H3zM7 19v2h2v-2H7zM11 19v2h2v-2h-2zM15 19v2h2v-2h-2zM19 19v2h1.1a.9.9 0 00.9-.9V19h-2zM21 15h-2v2h2v-2zM21 11v2h-2v-2h2zM21 9V7h-2v2h2zM21 3.9V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
                  />
                </svg>
              </div>
              <span>
                Retrospective
              </span>
            </a>
          </div>
        </li>
      </ul>
    </div>
    <div>
      <h2
        data-css-dk3o27=""
      >
        <button
          aria-label="Collapse"
          data-css-h54kwj=""
          onClick={[Function]}
        >
          <span
            data-css-rl0fow=""
          >
            Fundamentals
          </span>
          <div
            data-css-12f5sv2=""
            data-css-18aymev=""
          >
            <svg
              aria-label="caret down icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
              />
            </svg>
          </div>
        </button>
      </h2>
      <ul
        aria-hidden={false}
        data-css-1y8i23u=""
      >
        <li
          onClick={[Function]}
        >
          <div
            data-css-13xqjhl=""
            data-css-1b8plv5=""
          >
            <a
              data-css-f6e4dj=""
              href="#"
            >
              <div
                data-css-otejxm=""
                data-css-pfebor=""
              >
                <svg
                  fill="none"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M17 3h-2v2h2V3zM13 3v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zM3 11v2h2v-2H3zM3 17v-2h2v2H3zM3 19v1.1a.9.9 0 00.9.9H5v-2H3zM7 19v2h2v-2H7zM11 19v2h2v-2h-2zM15 19v2h2v-2h-2zM19 19v2h1.1a.9.9 0 00.9-.9V19h-2zM21 15h-2v2h2v-2zM21 11v2h-2v-2h2zM21 9V7h-2v2h2zM21 3.9V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
                  />
                </svg>
              </div>
              <span>
                Code
              </span>
            </a>
          </div>
        </li>
        <li
          onClick={[Function]}
        >
          <div
            data-css-13xqjhl=""
            data-css-1b8plv5=""
          >
            <a
              data-css-f6e4dj=""
              href="#"
            >
              <div
                data-css-otejxm=""
                data-css-pfebor=""
              >
                <svg
                  fill="none"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M17 3h-2v2h2V3zM13 3v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zM3 11v2h2v-2H3zM3 17v-2h2v2H3zM3 19v1.1a.9.9 0 00.9.9H5v-2H3zM7 19v2h2v-2H7zM11 19v2h2v-2h-2zM15 19v2h2v-2h-2zM19 19v2h1.1a.9.9 0 00.9-.9V19h-2zM21 15h-2v2h2v-2zM21 11v2h-2v-2h2zM21 9V7h-2v2h2zM21 3.9V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
                  />
                </svg>
              </div>
              <span>
                Submit
              </span>
            </a>
          </div>
        </li>
        <li
          onClick={[Function]}
        >
          <div
            data-css-13xqjhl=""
            data-css-1b8plv5=""
          >
            <a
              data-css-f6e4dj=""
              href="#"
            >
              <div
                data-css-otejxm=""
                data-css-pfebor=""
              >
                <svg
                  fill="none"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M17 3h-2v2h2V3zM13 3v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zM3 11v2h2v-2H3zM3 17v-2h2v2H3zM3 19v1.1a.9.9 0 00.9.9H5v-2H3zM7 19v2h2v-2H7zM11 19v2h2v-2h-2zM15 19v2h2v-2h-2zM19 19v2h1.1a.9.9 0 00.9-.9V19h-2zM21 15h-2v2h2v-2zM21 11v2h-2v-2h2zM21 9V7h-2v2h2zM21 3.9V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
                  />
                </svg>
              </div>
              <span>
                Review
              </span>
            </a>
          </div>
        </li>
      </ul>
    </div>
  </ul>
</div>
`;

exports[`Storyshots VerticalTabs onClick no href changes tier tag to button 1`] = `
<div
  style={
    Object {
      "height": "100%",
      "width": "240px",
    }
  }
>
  <ul
    data-css-nqd4p3=""
  >
    <li>
      <div
        data-css-13xqjhl=""
        data-css-1b8plv5=""
      >
        <button
          data-css-f6e4dj=""
          onClick={[Function]}
        >
          <span>
            Tier 1 button
          </span>
        </button>
      </div>
    </li>
    <li>
      <div
        data-css-1b8plv5=""
        data-css-nh4zmc=""
      >
        <button
          data-css-mbxfai=""
          onClick={[Function]}
        >
          Tier 2 button
        </button>
      </div>
    </li>
  </ul>
</div>
`;
